--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="ticktacktoe.css" />
   </head>
   <body>
-    <div class="msg-container hide">  // for hiding the content other than the game 
-        <p id="msg">Winner</p>  //to display the winner message if someone wins
+      <div class="msg-container hide">
+        <p id="msg">Winner</p> 
       <button id="new-btn">New Game</button>  
     </div>
     <main>
